# vimol

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
docs/superpowers/plans/: 2026-07-15-click-to-replace.md
docs/superpowers/specs/: 2026-07-15-click-to-replace-design.md  2026-07-16-cleanup-design.md  2026-07-16-delete-mode-design.md  2026-07-16-manual-bonds-design.md  2026-07-16-measure-mode-design.md  2026-07-16-quit-save-prompt-design.md
examples/: benzene.xyz  build_examples.py  c60.xyz  embed_demo.py  hydrocarbon.xyz  methane.xyz  water.xyz
scripts/: build-pypi-artifacts  lib.sh  publish-pypi-artifacts
src/mviewer/: __init__.py  app.py  arrows.py  bonds.py  camera.py  editor.py  elements.py  gl_adapter.py  gl_render.py  input.py  kitty.py  molecule.py  periodic_table.py  render.py  scene.py  templates.py  viewer.py  widget.py
src/mviewer/parsers/: __init__.py  mol.py  pdb.py  xyz.py
src/vimol/: __init__.py  app.py  editor.py  elements.py  gl_adapter.py  gl_render.py  input.py  kitty.py  molecule.py  periodic_table.py  render.py  scene.py  templates.py  viewer.py  widget.py
src/vimol/parsers/: xyz.py
tests/: test_editing.py  test_gl_render.py  test_mviewer.py  test_vimol.py
