[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "vimol"
dynamic = ["version"]        # single source of truth: vimol.__version__ (see [tool.setuptools.dynamic])
description = "A terminal molecular viewer and editor using the Kitty graphics protocol"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "vimol contributors" }]
keywords = [
    "molecular", "viewer", "editor", "terminal", "kitty", "chemistry",
    "visualization", "xyz", "pdb", "sdf", "cli", "tui",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Multimedia :: Graphics :: Viewers",
    "Typing :: Typed",
]
dependencies = ["numpy>=1.20"]

[project.optional-dependencies]
gl = ["moderngl>=5.6"]
test = ["pytest>=7"]

[project.scripts]
vimol = "vimol.app:main"

[tool.setuptools.dynamic]
version = { attr = "vimol.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
vimol = ["py.typed"]
